--- a/angular.json
+++ b/angular.json
@@ -89,8 +89,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
+         
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css" 
             ],
             "scripts": []
           }
